tests/baselines/reference/subtypingWithObjectMembers3.errors.txt
subtypingWithObjectMembers3.ts(17,15): error TS2430: Interface 'B' incorrectly extends interface 'A'.
  Types of property 'bar' are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
subtypingWithObjectMembers3.ts(27,15): error TS2430: Interface 'B2' incorrectly extends interface 'A2'.
  Types of property '2.0' are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
subtypingWithObjectMembers3.ts(37,15): error TS2430: Interface 'B3' incorrectly extends interface 'A3'.
  Types of property ''2.0'' are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
subtypingWithObjectMembers3.ts(49,15): error TS2430: Interface 'B' incorrectly extends interface 'A'.
  Types of property 'bar' are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
subtypingWithObjectMembers3.ts(59,15): error TS2430: Interface 'B2' incorrectly extends interface 'A2'.
  Types of property '2.0' are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
subtypingWithObjectMembers3.ts(69,15): error TS2430: Interface 'B3' incorrectly extends interface 'A3'.
  Types of property ''2.0'' are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.


==== subtypingWithObjectMembers3.ts (6 errors) ====
    interface Base {
        foo: string;
    }
    
    interface Derived extends Base {
        bar: string;
    }
    
    // N and M have the same name, same accessibility, same optionality, and N is a subtype of M
    // foo properties are valid, bar properties cause errors in the derived class declarations
    module NotOptional {
        interface A {
            foo: Base;
            bar: Derived;
        }
    
        interface B extends A {
                  ~
!!! error TS2430: Interface 'B' incorrectly extends interface 'A'.
!!! error TS2430:   Types of property 'bar' are incompatible.
!!! error TS2430:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 subtypingWithObjectMembers3.ts:6:5: 'bar' is declared here.
            foo: Derived; // ok
            bar: Base; // error
        }
    
        interface A2 {
            1: Base;
            2.0: Derived;
        }
    
        interface B2 extends A2 {
                  ~~
!!! error TS2430: Interface 'B2' incorrectly extends interface 'A2'.
!!! error TS2430:   Types of property '2.0' are incompatible.
!!! error TS2430:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 subtypingWithObjectMembers3.ts:6:5: 'bar' is declared here.
            1: Derived; // ok
            2: Base; // error
        }
    
        interface A3 {
            '1': Base;
            '2.0': Derived;
        }
    
        interface B3 extends A3 {
                  ~~
!!! error TS2430: Interface 'B3' incorrectly extends interface 'A3'.
!!! error TS2430:   Types of property ''2.0'' are incompatible.
!!! error TS2430:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 subtypingWithObjectMembers3.ts:6:5: 'bar' is declared here.
            '1': Derived; // ok
            '2.0': Base; // error
        }
    }
    
    module Optional {
        interface A {
            foo?: Base;
            bar?: Derived;
        }
    
        interface B extends A {
                  ~
!!! error TS2430: Interface 'B' incorrectly extends interface 'A'.
!!! error TS2430:   Types of property 'bar' are incompatible.
!!! error TS2430:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 subtypingWithObjectMembers3.ts:6:5: 'bar' is declared here.
            foo?: Derived; // ok
            bar?: Base; // error
        }
    
        interface A2 {
            1?: Base;
            2.0?: Derived;
        }
    
        interface B2 extends A2 {
                  ~~
!!! error TS2430: Interface 'B2' incorrectly extends interface 'A2'.
!!! error TS2430:   Types of property '2.0' are incompatible.
!!! error TS2430:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 subtypingWithObjectMembers3.ts:6:5: 'bar' is declared here.
            1?: Derived; // ok
            2?: Base; // error
        }
    
        interface A3 {
            '1'?: Base;
            '2.0'?: Derived;
        }
    
        interface B3 extends A3 {
                  ~~
!!! error TS2430: Interface 'B3' incorrectly extends interface 'A3'.
!!! error TS2430:   Types of property ''2.0'' are incompatible.
!!! error TS2430:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 subtypingWithObjectMembers3.ts:6:5: 'bar' is declared here.
            '1'?: Derived; // ok
            '2.0'?: Base; // error
        }
    }